# mandleMusicVideo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  art.cpp  art.h  aubioParser.cpp  aubioParser.h  cmake_install.cmake  colors.archive.txt  colors.cpp  colors.h  compile_commands.json  fingerPickingNotes1.txt  mandelzoom.cpp  math.cpp  math.h  percussionOnset.txt  run  structs.h  videoframe.cpp  videoframe.h
aubioScripts/: getOnsets.sh  percussionOnset.txt  percussionOnset1.txt
input/: Mandle Test Piece 1.m4a:Zone.Identifier
